--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
         "dev": "node --watch server.js"
     },
     "dependencies": {
+        "@vitalets/google-translate-api": "^9.2.0",
+        "bcryptjs": "^3.0.3",
         "express": "^4.18.2",
-        "rss-parser": "^3.13.0",
         "node-html-parser": "^6.1.11",
-        "@vitalets/google-translate-api": "^9.2.0"
+        "rss-parser": "^3.13.0"
     }
 }
