--- a/package.json
+++ b/package.json
@@ -1,17 +1,39 @@
 {
-    "name": "pulse-rss",
-    "version": "1.0.0",
-    "description": "High performance RSS aggregator",
-    "main": "server.js",
+    "name": "pulse-rss-v2",
+    "version": "2.0.0",
+    "description": "Modern RSS aggregator with AI-powered features",
+    "main": "src/backend/app.js",
+    "type": "module",
     "scripts": {
-        "start": "node server.js",
-        "dev": "node --watch server.js"
+        "dev:backend": "NODE_ENV=development node --watch src/backend/app.js",
+        "dev:frontend": "cd src/frontend && vite",
+        "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+        "build:frontend": "cd src/frontend && vite build",
+        "start": "NODE_ENV=production node src/backend/app.js",
+        "migrate": "node src/backend/scripts/migrate.js",
+        "seed": "node src/backend/scripts/seed.js",
+        "legacy": "node server.js"
     },
     "dependencies": {
         "@vitalets/google-translate-api": "^9.2.0",
         "bcryptjs": "^3.0.3",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-rate-limit": "^7.1.5",
+        "express-validator": "^7.0.1",
+        "jsonwebtoken": "^9.0.2",
+        "node-cron": "^3.0.3",
         "node-html-parser": "^6.1.11",
-        "rss-parser": "^3.13.0"
+        "rss-parser": "^3.13.0",
+        "sequelize": "^6.35.2",
+        "sqlite3": "^5.1.6",
+        "ws": "^8.16.0"
+    },
+    "devDependencies": {
+        "concurrently": "^8.2.2",
+        "nodemon": "^3.0.2",
+        "vite": "^5.0.10"
     }
 }
